# myhdf5

./: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: Dropzone.module.css  Dropzone.tsx  tauri-utils.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
